# firefly-rk3288_android_5.1_sdk

./: .classpath  .gitignore  android.ipr  android.iws  build.sh  buildspec.mk  firefly_rk3288_android_5.1.iws  manifest.xml  mkimage.sh
FFTools/: make.sh  rarimg.sh
RKTools/linux/: Readme.txt
RKTools/windows/: RK平台DDR测试工具_V1.33.7z  SD_Firmware_Tool_v1.45.rar
art/compiler/: Android.mk  compiled_method.cc  compiled_method.h  compiler.cc  compiler.h  elf_patcher.cc  elf_writer_quick.cc  elf_writer_quick.h  image_test.cc  oat_test.cc  oat_writer.cc  oat_writer.h
art/compiler/dex/: compiler_enums.h  compiler_ir.h  frontend.cc  frontend.h  global_value_numbering.cc  global_value_numbering_test.cc  local_value_numbering.cc  mir_analysis.cc  mir_dataflow.cc  mir_graph.cc  mir_graph.h  mir_graph_test.cc  mir_graph_test.h  mir_method_info.cc  mir_method_info.h  mir_optimization.cc  mir_optimization_test.cc  pass.h  pass_driver.h  pass_driver_me.h  pass_driver_me_opts.cc  pass_driver_me_post_opt.cc  pass_me.h  reference_map_calculator.cc  reference_map_calculator.h  reference_map_calculator_test.cc
art/compiler/driver/: compiler_driver-inl.h  compiler_driver.cc  compiler_driver.h  compiler_options.h
art/compiler/optimizing/: code_generator.cc  code_generator.h  optimizing_compiler.cc
art/compiler/utils/: arena_allocator.h  growable_array.h
art/dex2oat/: dex2oat.cc
art/disassembler/: disassembler_x86.cc
art/patchoat/: patchoat.cc  patchoat.h
art/runtime/: debugger.cc  dex_file.cc  elf_file.cc  elf_file.h  entrypoints_order_test.cc  mem_map.cc  mem_map.h  monitor.cc  native_bridge_art_interface.cc  parsed_options.cc  parsed_options.h  runtime.cc  runtime.h  stack.h  thread-inl.h  thread.cc  thread_list.cc  thread_list.h  utils.cc  utils.h
art/runtime/base/: mutex.cc  mutex.h
art/runtime/gc/: heap.cc  heap.h  reference_processor.cc
art/runtime/mirror/: class-inl.h
art/runtime/native/: dalvik_system_DexFile.cc  dalvik_system_VMRuntime.cc  dalvik_system_VMStack.cc  java_lang_Thread.cc
art/runtime/quick/: inline_method_analyser.h
art/runtime/verifier/: reg_type_cache.cc  reg_type_cache.h
art/sigchainlib/: sigchain.cc  sigchain.h  sigchain_dummy.cc  version-script.txt
art/test/: Android.run-test.mk  run-all-tests  run-test
art/test/115-native-bridge/: nativebridge.cc
art/test/etc/: host-run-test-jar  push-and-run-test-jar
art/tools/: gen_sha.py
bootable/recovery/: Android.mk  adb_install.cpp  bootloader.cpp  common.h  install.cpp  install.h  recovery.cpp  recovery_utils.h  rkimage.cpp  rkimage.h  roots.cpp  sdtool.h
bootable/recovery/applypatch/: Android.mk  applypatch.c
bootable/recovery/board_id/: Android.mk  board_id_ctrl.c  board_id_ctrl.h  custom.c  custom.h  parse_cust_xml.c  parse_device_xml.c  parse_xml.h  restore.c  (+1 more)
cts/: CtsTestCaseList.mk
frameworks/base/: Android.mk  modify_alarm_filter.patch
hardware/rockchip/camera/SiliconImage/isi/drv/OV14825/: Android.mk.bak  CMakeLists.txt
hardware/rockchip/camera/SiliconImage/isi/drv/OV14825/calib/: CMakeLists.txt
hardware/rockchip/camera/SiliconImage/isi/drv/OV14825/calib/OV14825/: OV14825_sample_02.xml  OV14825_sample_08.xml  OV14825_sample_09.xml  OV14825_sample_11.xml  OV14825_sample_12.xml  OV14825_sample_13.xml  OV14825_sample_14.xml  OV14825_sample_15.xml
hardware/rockchip/camera/SiliconImage/isi/drv/OV14825/codeanalysis/doxygen/: doxyfile.cmake
hardware/rockchip/camera/SiliconImage/isi/drv/OV14825/codeanalysis/doxygen/images/: dct_header.html  simg_header.html
hardware/rockchip/camera/SiliconImage/isi/drv/OV14825/codeanalysis/doxygen/latex/: dct_header.tex.in  dreamchip.sty  siliconimage.sty  simg_header.tex.in
hardware/rockchip/camera/SiliconImage/isi/drv/OV14825/codeanalysis/pc_lint/: private.lnt
hardware/rockchip/camera/SiliconImage/isi/drv/OV14825/include_priv/: OV14825_MIPI_a.h  OV14825_MIPI_d50.h  OV14825_MIPI_d65.h  OV14825_MIPI_d75.h  OV14825_MIPI_f11.h  OV14825_MIPI_f2.h  OV14825_MIPI_priv.h
hardware/rockchip/camera/SiliconImage/isi/drv/OV14825/source/: OV14825.c  OV14825_tables.c
kernel/: Makefile  firefly-led-test.config  resource.img
prebuilts/: qemu-kernel.tar.bz2ad
prebuilts/android-emulator/: README
system/displayd/: Android.mk  BcshManager.cpp  BcshManager.h  CommandListener.cpp  CommandListener.h  Config.h  DisplayManager.cpp  DisplayManager.h  DisplaydCommand.cpp  DisplaydCommand.h  Hdcp.cpp  Hdcp.h  NetlinkHandler.cpp  NetlinkHandler.h  NetlinkManager.cpp  NetlinkManager.h  OtgManager.cpp  OtgManager.h  ResponseCode.h  ScreenScaleManager.cpp  ScreenScaleManager.h  ddc.c  displayd_add_FOR_ROCKCHIP_RBOX  main.cpp
system/vold/: Android.mk  CommandListener.cpp  DirectVolume.cpp  DirectVolume.h  Ext2.cpp  Ext3.cpp  Ext4.cpp  Ext4.h  Fat.cpp  Fat.h  G3Dev.cpp  G3Dev.h  Misc.cpp  MiscManager.cpp  NetlinkHandler.cpp  NetlinkManager.cpp  Ntfs.cpp  Ntfs.h  ResponseCode.h  Volume.cpp  Volume.h  VolumeManager.cpp  VolumeManager.h  cryptfs.c  main.cpp
u-boot/: Makefile
(+1981 files in other folders)
